--- a/templates/login.html
+++ b/templates/login.html
@@ -102,11 +102,11 @@
             form .text h3 a:hover{
               text-decoration: underline;
             }
-            a.pass-link
-            {
-              color: #91588b;
-              text-align: left;
-            }
+            {#a.pass-link#}
+            {#{#}
+            {#  color: #91588b;#}
+            {#  text-align: left;#}
+            {#}#}
       </style>
    </head>
 <body>
@@ -124,7 +124,7 @@
         <h3>Remember me</h3>
       </div><br>
       <div >
-          <a href="#" class="pass-link">Forgot password?</a>
+          <a href="#" style="text-align: right">Forgot password?</a>
       </div>
       <div class="input-box button">
         <input type="Submit" value="Login">
