create details app

--- a/templates/_partials/_navbar.html
+++ b/templates/_partials/_navbar.html
@@ -84,20 +84,39 @@
                             >Contact</a>
                         </div>
                         <div class="navbar-nav ml-auto py-0">
-                            <a href="{% url 'login' %}"
-                                {% if request.path == '/login/' %}
-                                    class="nav-item nav-link active"
-                                {% else %}
-                                    class="nav-item nav-link"
-                                {% endif %}
-                            >Login</a>
-                            <a href="{% url 'register' %}"
-                                {% if request.path == '/register/' %}
-                                    class="nav-item nav-link active"
-                                {% else %}
-                                    class="nav-item nav-link"
-                                {% endif %}
-                            >Register</a>
+                            {% if user.is_authenticated %}
+                                <a href="{% url 'register' %}"
+                                    {% if request.path == '/register/' %}
+                                        class="nav-item nav-link active"
+                                    {% else %}
+                                        class="nav-item nav-link"
+                                    {% endif %}
+                                >Profile<small>({{ user.username }})</small></a>
+
+                                <a href="{% url 'signout' %}"
+                                   class="nav-item nav-link"
+                                >Logout</a>
+
+                            {% else %}
+
+                                <a href="{% url 'login' %}"
+                                    {% if request.path == '/login/' %}
+                                        class="nav-item nav-link active"
+                                    {% else %}
+                                        class="nav-item nav-link"
+                                    {% endif %}
+                                >Login</a>
+                                <a href="{% url 'register' %}"
+                                    {% if request.path == '/register/' %}
+                                        class="nav-item nav-link active"
+                                    {% else %}
+                                        class="nav-item nav-link"
+                                    {% endif %}
+                                >Register</a>
+
+                            {% endif %}
+
+
                         </div>
                     </div>
                 </nav>
