--- a/templates/login.html
+++ b/templates/login.html
@@ -4,13 +4,15 @@
     <link rel="stylesheet" href="{% static 'css/login.css' %}">
     <div class="login-container">
         <h2>Login</h2>
-        <form action="#">
+        <form method="post" action="{% url 'signin' %}">
+            {% csrf_token %}
+
             <div class="input-box">
                 <div>
-                    <input type="text" placeholder="Email Address" required>
+                    <input type="text" name="username" placeholder="Name" required>
                 </div>
                 <div>
-                    <input type="password" placeholder="Password" required>
+                    <input type="password" name="password" placeholder="Password" required>
                 </div>
                 <div class="remember">
                     <input type="checkbox">
