create context processors

--- a/templates/_partials/_head.html
+++ b/templates/_partials/_head.html
@@ -1,10 +1,10 @@
 {% load static %}
 <head>
     <meta charset="utf-8">
-    <title>EShopper - Bootstrap Shop Template</title>
+    <title>{{ main.title }}</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
+    <meta content="EShop" name="keywords">
+    <meta content="EShop Django" name="description">
 
     <!-- Favicon -->
     <link href="{% static 'img/favicon.ico' %}" rel="icon">
