--- a/templates/_partials/_navbar.html
+++ b/templates/_partials/_navbar.html
@@ -58,7 +58,7 @@
                                 {% endif %}
                         >Shop</a>
                         <a href="{% url 'detail' %}"
-                                {% if request.path == '/detail/' %}
+                                {% if request.path == '/products/detail/' %}
                            class="nav-item nav-link active"
                                 {% else %}
                            class="nav-item nav-link"
