--- a/templates/_partials/_topbar.html
+++ b/templates/_partials/_topbar.html
@@ -13,21 +13,35 @@
             </div>
             <div class="col-lg-6 text-center text-lg-right">
                 <div class="d-inline-flex align-items-center">
-                    <a class="text-dark px-2" href="">
-                        <i class="fab fa-facebook-f"></i>
-                    </a>
-                    <a class="text-dark px-2" href="">
-                        <i class="fab fa-twitter"></i>
-                    </a>
-                    <a class="text-dark px-2" href="">
-                        <i class="fab fa-linkedin-in"></i>
-                    </a>
-                    <a class="text-dark px-2" href="">
-                        <i class="fab fa-instagram"></i>
-                    </a>
-                    <a class="text-dark pl-2" href="">
-                        <i class="fab fa-youtube"></i>
-                    </a>
+                    {% if main.facebook %}
+                        <a class="text-dark px-2" href="{{ main.facebook }}">
+                            <i class="fab fa-facebook-f"></i>
+                        </a>
+                    {% endif %}
+
+                    {% if main.twitter %}
+                        <a class="text-dark px-2" href="{{ main.twitter }}">
+                            <i class="fab fa-twitter"></i>
+                        </a>
+                    {% endif %}
+
+                    {% if main.linkedin %}
+                        <a class="text-dark px-2" href="{{ main.linkedin }}">
+                            <i class="fab fa-linkedin-in"></i>
+                        </a>
+                    {% endif %}
+
+                    {% if main.instagram %}
+                        <a class="text-dark px-2" href="{{ main.instagram }}">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                    {% endif %}
+
+                    {% if main.youtube %}
+                        <a class="text-dark pl-2" href="{{ main.youtube }}">
+                            <i class="fab fa-youtube"></i>
+                        </a>
+                    {% endif %}
                 </div>
             </div>
         </div>
