--- a/templates/detail.html
+++ b/templates/detail.html
@@ -1,6 +1,6 @@
 {% extends 'master.html' %}
 {% load static %}
-
+{% load humanize %}
 {% block content %}
 
      <!-- Page Header Start -->
@@ -18,23 +18,23 @@
 
 
     <!-- Shop Detail Start -->
-    {% for listing in listings %}
+{#    {% for listing in listings %}#}
         <div class="container-fluid py-5">
             <div class="row px-xl-5">
                 <div class="col-lg-5 pb-5">
                     <div id="product-carousel" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner border">
                             <div class="carousel-item active">
-                                <img class="w-100 h-100" src="{{ listing.photo_1.url }}" alt="Image">
+                                <img class="w-100 h-100" src="{{ listings.photo_1.url }}" alt="Image">
                             </div>
                             <div class="carousel-item">
-                                <img class="w-100 h-100" src="{{ listing.photo_2.url }}" alt="Image">
+                                <img class="w-100 h-100" src="{{ listings.photo_2.url }}" alt="Image">
                             </div>
                             <div class="carousel-item">
-                                <img class="w-100 h-100" src="{{ listing.photo_3.url }}" alt="Image">
+                                <img class="w-100 h-100" src="{{ listings.photo_3.url }}" alt="Image">
                             </div>
                             <div class="carousel-item">
-                                <img class="w-100 h-100" src="{{ listing.photo_4.url }}" alt="Image">
+                                <img class="w-100 h-100" src="{{ listings.photo_4.url }}" alt="Image">
                             </div>
                         </div>
                         <a class="carousel-control-prev" href="#product-carousel" data-slide="prev">
@@ -47,7 +47,7 @@
                 </div>
 
                 <div class="col-lg-7 pb-5">
-                    <h3 class="font-weight-semi-bold">{{ listing.title }}</h3>
+                    <h3 class="font-weight-semi-bold">{{ listings.title }}</h3>
                     <div class="d-flex mb-3">
                         <div class="text-primary mr-2">
                             <small class="fas fa-star"></small>
@@ -58,8 +58,8 @@
                         </div>
                         <small class="pt-1">(50 Reviews)</small>
                     </div>
-                    <h3 class="font-weight-semi-bold mb-4">${{ listing.price }}</h3>
-                    <p class="mb-4">{{ listing.qualification }}</p>
+                    <h3 class="font-weight-semi-bold mb-4">$ {{ listings.price | intcomma}}</h3>
+                    <p class="mb-4">{{ listings.qualification }}</p>
                     <div class="d-flex mb-3">
                         <p class="text-dark font-weight-medium mb-0 mr-3">Sizes:</p>
                         <form>
@@ -129,18 +129,30 @@
                     <div class="d-flex pt-2">
                         <p class="text-dark font-weight-medium mb-0 mr-2">Share on:</p>
                         <div class="d-inline-flex">
-                            <a class="text-dark px-2" href="{{ listing.facebook }}">
-                                <i class="fab fa-facebook-f"></i>
-                            </a>
-                            <a class="text-dark px-2" href="{{ listing.twitter }}">
-                                <i class="fab fa-twitter"></i>
-                            </a>
-                            <a class="text-dark px-2" href="{{ listing.linkedin }}">
-                                <i class="fab fa-linkedin-in"></i>
-                            </a>
-                            <a class="text-dark px-2" href="{{ listing.pinterest }}">
-                                <i class="fab fa-pinterest"></i>
-                            </a>
+
+                            {% if listings.pinterest %}
+                                <a class="text-dark px-2" href="{{ listings.facebook }}">
+                                    <i class="fab fa-facebook-f"></i>
+                                </a>
+                            {% endif %}
+
+                            {% if listings.pinterest %}
+                                <a class="text-dark px-2" href="{{ listings.twitter }}">
+                                    <i class="fab fa-twitter"></i>
+                                </a>
+                            {% endif %}
+
+                            {% if listings.pinterest %}
+                                <a class="text-dark px-2" href="{{ listings.linkedin }}">
+                                    <i class="fab fa-linkedin-in"></i>
+                                </a>
+                            {% endif %}
+
+                            {% if listings.pinterest %}
+                                <a class="text-dark px-2" href="{{ listings.pinterest }}">
+                                    <i class="fab fa-pinterest"></i>
+                                </a>
+                            {% endif %}
                         </div>
                     </div>
                 </div>
@@ -155,12 +167,12 @@
                     <div class="tab-content">
                         <div class="tab-pane fade show active" id="tab-pane-1">
                             <h4 class="mb-3">Product Description</h4>
-                            <p>{{ listing.description }}</p>
+                            <p>{{ listings.description | safe}}</p>
                             <p>Dolore magna est eirmod sanctus dolor, amet diam et eirmod et ipsum. Amet dolore tempor consetetur sed lorem dolor sit lorem tempor. Gubergren amet amet labore sadipscing clita clita diam clita. Sea amet et sed ipsum lorem elitr et, amet et labore voluptua sit rebum. Ea erat sed et diam takimata sed justo. Magna takimata justo et amet magna et.</p>
                         </div>
                         <div class="tab-pane fade" id="tab-pane-2">
                             <h4 class="mb-3">Additional Information</h4>
-                            <p>{{ listing.information }}</p>
+                            <p>{{ listings.information | safe}}</p>
                             <div class="row">
                                 <div class="col-md-6">
                                     <ul class="list-group list-group-flush">
@@ -211,7 +223,7 @@
                                                 <i class="fas fa-star-half-alt"></i>
                                                 <i class="far fa-star"></i>
                                             </div>
-                                            <p>{{ listing.review }}</p>
+                                            <p>{{ listings.review | safe }}</p>
                                         </div>
                                     </div>
                                 </div>
@@ -252,7 +264,7 @@
                 </div>
             </div>
         </div>
-    {% endfor %}
+{#    {% endfor %}#}
 
 
     <!-- Shop Detail End -->
